fixed an issue where the page class was too short. height changed to min-height, fixed. also some other minor changes

--- a/css/main.css
+++ b/css/main.css
@@ -55,7 +55,7 @@ list-style: none;
 .page {
 	background-color: lightgreen;
 	max-width: 694px;
-	height: 395px;
+	min-height: 395px;
 	border: 3px solid black;
 	border-radius: 5px;
 	margin-top: 15px;
